assets/css/main.css
/* ... */
ol,
ul {
    padding-left: 40px
}

figure,
ol,
p,
ul {
    margin: 1em 0
}

a img {
    border: 0
}

#particles-js {
    background: #1488CC;
    /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);
    /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #2B32B2, #1488CC);
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

    display: flex;
    vertical-align: bottom;
    width: 100%;
    min-height: 100vh;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed
}

#particles-js .particles-js-canvas-el {
    width: 100% !important;
    height: 100vh !important
}

.header {
    z-index: 1;
    text-align: center;
    color: #fff;
    position: absolute;
    font-family: 'Rubik', sans-serif;
    width: 80%;
    top: 50%;
    left: 50%;
    margin: 0 auto;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%)
}

.header .site-title {
    font-size: 35px;
    display: block;
    line-height: 1;
    color: #fff;
}

@media only screen and (min-width:550px) {
    .header .site-title {
        margin: 0;
        font-size: 100px
    }
}

.header .site-description {
    font-size: 20px;
    display: block;
    line-height: 1;
    color: #fff;
    margin-top: 10px
}

@media only screen and (min-width:550px) {
    .header .site-description {
        font-size: 40px
    }
}

.header-links {
    margin: 10px
}

.header-links .link {
    color: #fff;
    text-decoration: none;
    font-size: 15px;
    margin: 10px
}

@media only screen and (min-width:550px) {
    .header-links .link {
        font-size: 20px
    }
}

.header-icons {
    display: flex;
    justify-content: center;
    text-align: center
}

.down,
.header-icons .icon {
    color: #fff;
    text-align: center
}

.header-icons .icon {
    height: 20px;
    padding: 10px;
    border-radius: 50%;
    border: 2px solid #fff;
    transition: all .7s;
    width: 20px;
    font-size: 20px;
    margin: 5px
}

.header-icons .icon:active,
.header-icons .icon:hover {
    color: #1488CC;
    background: #fff
}

@media only screen and (min-width:550px) {
    .header-icons .icon {
        width: 35px;
        height: 35px;
        font-size: 35px
    }
}

.down {
    position: absolute;
    bottom: 25px;
    width: 100%;
    margin: 0 auto;
    display: block;
    font-size: 30px;
    cursor: pointer
}

.down .icon {
    position: absolute;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    width: 100px;
    height: 100px;
    fill: #fff;
    -webkit-animation: pulse 1.3s infinite;
    animation: pulse 1.3s infinite
}

.down .icon:active,
.down .icon:hover,
.footer a:active,
.footer a:hover {
    color: #4b5664
}

#about {
    width: 90%;
    margin: 0 auto;
    max-width: 960px
}

@media only screen and (min-width:550px) {
    #about {
        width: 80%
    }
}

.tech {
    margin: 10px
}

.user {
    text-align: center;
    font-size: 60px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
}

.user p {
    font-size: 16px
}

@media only screen and (min-width:550px) {
    .user {
        flex-wrap: nowrap;
        font-size: 75px
    }
}

.user-details {
    text-align: center;
    margin: 5px auto
}

#projects {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 90%;
    max-width: 960px;
    margin: 0 auto
}

@media only screen and (min-width:550px) {
    #projects {
        width: 80%
    }
}

.user-projects {
    margin: 20px auto
}

.user-projects img {
    max-width: 100%;
    height: auto;
    border-radius: 5px
}

.user-projects h5 {
    margin: 0
}

.user-projects li {
    color: #1488CC;
    font-size: 1.1rem
}

.user-projects p {
    margin-right: 5px
}

@media only screen and (min-width:550px) {
    .contents {
        margin-left: 0;
        width: 48%
    }

    .contents,
    .contents-right {
        margin-top: -5%
    }

    .contents-right,
    .images-right {
        float: right;
        width: 48%
    }

    .images-right img {
        float: right
    }

    .images-left {
        float: left;
        width: 48%
    }

    .images-left img {
        float: left
    }
}

.project-link {
    display: inline-block;
    margin: 10px 0;
    padding: 5px;
    color: #1488CC;
    background-color: transparent;
    border: 1px solid #1488CC;
    border-radius: 10px;
    text-align: center;
    outline: 0;
    text-decoration: none;
    cursor: pointer;
    transition: color .3s ease-out, background-color .3s ease-out, border-color .3s ease-out
}

.project-link:active,
.project-link:hover {
    background-color: #5347a8;
    border-color: #5347a8;
    color: #fff;
    transition: color .3s ease-in, background-color .3s ease-in, border-color .3s ease-in
}

.footer {
    background: #1488CC;
    /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);
    /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #2B32B2, #1488CC);
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    padding: 10px 0;
    margin-top: 100px;
    text-align: center;
    color: #fff
}

.footer .love {
    color: red
}

.footer a {
    text-decoration: none;
    margin: 0;
    color: #fff
}

